# Audio-notes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_audio_transcription.json  test_audio_transcription_1.json  test_audio_transcription_1.txt  test_comprehensive_workflow.py  test_config_complete.py  test_config_system.py  test_edge_cases.py  test_enhanced_ollama.py  test_error_handling_comprehensive.py  test_error_handling_edge_cases.py  test_full_response.py  test_obsidian_debug.py  test_ollama_fix.py  test_ollama_unified_suite.py  test_qwen_integration_manual.py  test_raw_ollama.py  test_retry_circuit_breaker.py
.github/: README.md
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  performance.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json
docs/: EXAMPLES.md  INSTALLATION.md
examples/: demo_audio_processor.py  demo_whisper_transcriber.py
obsidian_vault/Audio Notes/: 20250619_223112_with_max_8_words.md  20250619_223906_in_Chinese_that's_concise_and_directly_related_to.md  20250619_224022_BELL_RINGS.md  20250619_224208_with_max_8_words.md
src/audio_notes/: __init__.py  audio_processor.py  cli.py  config.py  main.py  obsidian_writer.py  test_audio_processor.py  test_obsidian_comprehensive.py  test_obsidian_debug.py  test_whisper_simple.py  whisper_transcriber.py
test_cli_vault/Audio Notes/: 20250619_005146_in_8_words_for_the_content_BELL_R.md
test_complete_workflow_vault/Audio Notes/: 20250619_222125_BELL_RINGS.md
test_end_to_end_vault/Audio Notes/: 20250619_005600_in_8_words_for_the_content_BELL_R.md
test_enhanced_ollama_vault/Audio Notes/: 20250620_131737_AI_Algorithms_Transcription.md
test_final_workflow_vault/Audio Notes/: 20250619_223750_BELL_RINGS.md
test_multi_workflow_vault/Audio Notes/: 20250619_222753_BELL_RINGS.md
test_obsidian_vault/Audio Notes/: 20250617_220106_Testing_Qwen_3.0.6B_Obsidian_Integration.md
test_qwen_manual_vault/Audio Notes/: 20250618_232141_think_Okay,_the_user_wants_a_concise_and_descriptive_title_in_maximum_8_words_for_the_audio_transcri.md  20250618_234818_think_Okay,_let's_see._The_user_wants_a_concise_and_descriptive_title_for_their_audio_transcriptio.md  20250618_234934_think_Okay,_the_user_wants_a_short_title_for_this_audio_note,_up_to_8_words._Let_me_read_the_conte.md  20250618_235043_think.md
tests/: conftest.py
tests/config/: test_config_complete.py
tests/integration/: test_cli_workflows.py
tests/ollama/: test_comprehensive_ollama_coverage.py  test_hidethinking_api.py  test_ollama_comprehensive.py  test_ollama_debug.py  test_ollama_fix.py
tests/unit/: test_edge_cases.py
